<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:background="@color/black_shade_1"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:visibility="visible" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/black_shade_1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="28dp"
            android:text="@string/th_nh_ph"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="4.5"
                android:background="@android:color/transparent"
                android:hint="@string/nh_p_t_n_th_nh_ph"
                android:minHeight="48dp"
                android:padding="5dp"
                android:textColorHint="@color/white">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="18dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="78sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="125dp"
            android:layout_height="134dp"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_launcher_1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/t_nh_tr_ng"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/d_b_o_th_i_ti_t_h_m_nay"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_above="@id/recyclerView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-5dp"
            android:layout_marginBottom="-9dp"
            app:srcCompat="@drawable/ic_baseline_search_24" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_above="@id/imageView4"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="-5dp"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="43dp"
            android:layout_height="36dp"
            android:layout_above="@id/recyclerView"
            android:layout_alignParentStart="true"
            android:duplicateParentState="false"
            android:visibility="gone"
            app:srcCompat="@android:drawable/radiobutton_off_background" />


    </RelativeLayout>
</RelativeLayout>